<resources>
    <string name="app_name">Octobud</string>
    <string name="Hello">Hello</string>
    <string name="name">What is your child\'s name?</string>
    <string name="initial_welcome1">
        Dear Pritam\'s warden \n
I’m Octobud. I will help Pritam\n
develop cognitive skills in relation to language. \n\n
This app has been designed to switch off \n
automatically after use for 20 minutes.\n
The app cannot be reused unless there’s a gap of\n
at least 3 hours.

</string>
    <string name="random_info">Each tentacle has been designed to teach \n
a specific skill on being pressed.\n\n

The skills will be taught through audio visuals.\n\n

Each skill is taught at different levels.\n
You can either choose a level as per your/your child’s \n
current development stage or start at level 1.</string>
    <string name="welcome">Welcome!</string>
    <string name="mainPage">Move to main page</string>
    <string name="text_accounts">All Accounts</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="text_not_member">No account yet? Create one</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="action_settings">Settings</string>
    <string name="text_hello">Hello,</string>
    <string name="text_title">Android Tutorials Hub</string>
    <string name="serial">This Octobud has been designed specifically \n
for people with Down Syndrome. \n
It will accompany your child and aid your/his/her \n
cognitive development. \n
Please enter the 8 digit product code \n
(located behind the head of the Octobud) \n
of your child’s Octobud below.</string>
    <string name="first_login">First Time Login</string>
    <string name="ALPHABETS">ALPHABETS</string>
    <string name="ABCD">ABCD</string>
    <string name="difficultyLevel"></string>
    <string name="difficultyLevelText">Current Difficulty Level is:</string>
</resources>
